Fix footer overscroll on Safari

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,7 +7,3 @@
   --secondary: #3f5d4e;
   --text: #000000;
 }
-
-html {
-  scroll-behavior: smooth;
-}
